<resources>
    <string name="app_name">TokoSehat</string>

    <string name="empty_view_text">Get started by adding a drug</string>

    <string name="category_overview">Overview</string>

    <string name="category_price">Price</string>

    <string name="category_status">Status</string>

    <string name="category_type">Type</string>

    <string name="category_dosage">Dosage</string>

    <string name="category_side_effect">Side Effect</string>

    <string name="currency_rupiah">Rp. </string>

    <string name="hint_name">Name</string>

    <string name="hint_price">Price</string>

    <string name="hint_diseases">Diseases</string>

    <string name="delete_dialog_msg">Delete this drug?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>
    
    <string name="status_available">Available</string>

    <string name="status_out_of_stock">Out of stock</string>

    <string name="category_name">Name</string>

    <string name="category_diseases">Diseases</string>

    <string name="quantity_box">Box</string>

    <string name="quantity_dozen">Dozen</string>

    <string name="quantity_item">Item</string>

    <string name="detail_quantity_item">/ Item</string>

    <string name="detail_quantity_dozen">/ Dozen</string>

    <string name="detail_quantity_box">/ Box</string>
</resources>
