<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editor_category_overview"
            style="@style/editor_text_view"
            android:text="@string/category_overview" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editor_edit_name"
                style="@style/editor_edit_text"
                android:hint="@string/hint_name"
                android:inputType="textCapWords|textMultiLine" />

            <EditText
                android:id="@+id/editor_edit_diseases"
                style="@style/editor_edit_text"
                android:hint="@string/hint_diseases"
                android:inputType="textCapWords|textMultiLine" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editor_category_price"
            style="@style/editor_text_view"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/editor_layout_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/editor_rupiah_item"
                    style="@style/currency_rupiah"

                    android:text="@string/currency_rupiah"
                    android:paddingRight="5dp"/>

                <EditText
                    android:id="@+id/editor_price_edit_item"
                    android:layout_width="match_parent"
                    style="@style/editor_edit_number"
                    android:layout_toRightOf="@id/detail_rupiah_item"
                    android:layout_toLeftOf="@id/quantity_item"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/editor_quantity_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_quantity_item"
                    style="@style/detail_quantity"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/editor_layout_dozen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/editor_rupiah_dozen"
                    style="@style/currency_rupiah"
                    android:text="@string/currency_rupiah"
                    android:paddingRight="5dp"/>

                <EditText
                    android:id="@+id/editor_price_edit_dozen"
                    android:layout_width="match_parent"
                    style="@style/editor_edit_number"
                    android:layout_toRightOf="@id/detail_rupiah_dozen"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/editor_quantity_dozen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_quantity_dozen"
                    style="@style/detail_quantity"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/editor_layout_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/editor_rupiah_box"
                    style="@style/currency_rupiah"
                    android:text="@string/currency_rupiah"
                    android:paddingRight="5dp"/>

                <EditText
                    android:id="@+id/editor_price_edit_box"
                    android:layout_width="match_parent"
                    style="@style/editor_edit_number"
                    android:layout_toRightOf="@id/detail_rupiah_box"
                    android:inputType="number"/>

                <TextView
                    android:id="@+id/editor_quantity_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_quantity_box"
                    style="@style/detail_quantity"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editor_category_status"
            style="@style/editor_text_view"
            android:text="@string/category_status" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <Spinner
                android:id="@+id/editor_spinner"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:entries="@array/array_status_options"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>