<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/editor_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_category_name"
            style="@style/editor_text_view"
            android:text="@string/category_name" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <TextView
                android:id="@+id/detail_name"
                style="@style/editor_edit_text"
                android:paddingLeft="5dp"/>

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">
        
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/category_diseases"
            style="@style/editor_text_view"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">
            
            <TextView
                android:id="@+id/detail_diseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editor_edit_text"
                android:paddingLeft="5dp"/>

        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_category_price"
            style="@style/editor_text_view"
            android:text="@string/category_price" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/detail_rupiah_item"
                    style="@style/currency_rupiah"
                    android:text="@string/currency_rupiah"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/detail_price_text_item"
                    android:layout_width="match_parent"
                    style="@style/editor_edit_number"
                    android:layout_toRightOf="@id/detail_rupiah_item"
                    android:layout_toLeftOf="@id/quantity_item"/>

                <TextView
                    android:id="@+id/quantity_item"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_quantity_item"
                    style="@style/detail_quantity"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_dozen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/detail_rupiah_dozen"
                    style="@style/currency_rupiah"
                    android:text="@string/currency_rupiah"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/detail_price_text_dozen"
                    android:layout_width="match_parent"
                    style="@style/editor_edit_number"
                    android:layout_toRightOf="@id/detail_rupiah_dozen" />

                <TextView
                    android:id="@+id/quantity_dozen"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_quantity_dozen"
                    style="@style/detail_quantity"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/layout_box"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="15dp">

                <TextView
                    android:id="@+id/detail_rupiah_box"
                    style="@style/currency_rupiah"
                    android:text="@string/currency_rupiah"
                    android:paddingRight="5dp"/>

                <TextView
                    android:id="@+id/detail_price_text_box"
                    android:layout_width="match_parent"
                    style="@style/editor_edit_number"
                    android:layout_toRightOf="@id/detail_rupiah_box" />

                <TextView
                    android:id="@+id/quantity_box"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/detail_quantity_box"
                    style="@style/detail_quantity"
                    android:layout_alignParentRight="true"/>

            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/detail_category_status"
            style="@style/editor_text_view"
            android:layout_height="wrap_content"
            android:text="@string/category_status" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/detail_status"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:paddingLeft="5dp"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingTop="12dp"/>


        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/editor_text_view"
            android:text="@string/category_type"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/detail_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editor_edit_text"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/editor_text_view"
            android:text="@string/category_dosage"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/detail_dosage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editor_edit_text"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            style="@style/editor_text_view"
            android:text="@string/category_side_effect"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2">

            <TextView
                android:id="@+id/detail_side_effect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editor_edit_text"/>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>